--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,92 @@
+absl-py==2.1.0
 annotated-types==0.7.0
 anyio==4.4.0
+astunparse==1.6.3
+cachetools==5.3.3
 certifi==2024.6.2
+charset-normalizer==3.3.2
 click==8.1.7
+contourpy==1.2.1
+cycler==0.12.1
 dnspython==2.6.1
 email_validator==2.1.1
+exceptiongroup==1.2.1
 fastapi==0.111.0
 fastapi-cli==0.0.4
+flatbuffers==24.3.25
+fonttools==4.53.0
+gast==0.5.4
+google-auth==2.30.0
+google-auth-oauthlib==1.2.0
+google-pasta==0.2.0
+grpcio==1.64.1
 h11==0.14.0
+h5py==3.11.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
 idna==3.7
 Jinja2==3.1.4
+joblib==1.4.2
+keras==2.15.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.5
+libclang==18.1.1
+Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+matplotlib==3.9.0
 mdurl==0.1.2
+ml-dtypes==0.2.0
+namex==0.0.8
+nltk==3.8.1
+numpy==1.26.4
+oauthlib==3.2.2
+opt-einsum==3.3.0
+optree==0.11.0
 orjson==3.10.3
+packaging==24.0
+pandas==2.2.2
+pillow==10.3.0
+protobuf==3.20.3
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pydantic==2.7.3
 pydantic_core==2.18.4
 Pygments==2.18.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
+pytz==2024.1
 PyYAML==6.0.1
+regex==2024.5.15
+requests==2.32.3
+requests-oauthlib==2.0.0
 rich==13.7.1
+rsa==4.9
+Sastrawi==1.0.1
+seaborn==0.13.2
 shellingham==1.5.4
+six==1.16.0
 sniffio==1.3.1
 starlette==0.37.2
+tensorboard==2.15.0
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-io-gcs-filesystem==0.37.0
+tensorflow-macos==2.15.0
+termcolor==2.4.0
+tqdm==4.66.4
 typer==0.12.3
 typing_extensions==4.12.1
+tzdata==2024.1
 ujson==5.10.0
+urllib3==2.2.1
 uvicorn==0.30.1
 uvloop==0.19.0
 watchfiles==0.22.0
 websockets==12.0
+Werkzeug==3.0.3
+wrapt==1.14.1
